terraform/deployments/chat/redis.tf
locals {
  chat_redis_name     = "chat-redis"
  elasticache_subnets = [for k, v in data.tfe_outputs.vpc.nonsensitive_values.private_subnet_ids : v if startswith(k, "elasticache_")]
}

resource "aws_elasticache_subnet_group" "chat_redis_cluster" {
  name       = local.chat_redis_name
  subnet_ids = local.elasticache_subnets
}

resource "aws_security_group" "chat_redis_cluster" {
  name        = local.chat_redis_name
  vpc_id      = data.tfe_outputs.vpc.nonsensitive_values.id
  description = "GOV.UK Chat Redis cluster"
  tags = {
    Name = local.chat_redis_name
  }
}

resource "aws_elasticache_parameter_group" "chat_redis_cluster" {
  name   = local.chat_redis_name
  family = "redis7"

  parameter {
    name  = "maxmemory-policy"
    value = "noeviction"
  }

  tags = {
    Name = local.chat_redis_name
  }
}

resource "aws_elasticache_replication_group" "chat_redis_cluster" {
  apply_immediately          = var.chat_redis_cluster_apply_immediately
  replication_group_id       = local.chat_redis_name
  description                = "Redis for GOV.UK Chat Sidekiq"
  node_type                  = var.chat_redis_cluster_node_type
  num_cache_clusters         = var.chat_redis_cluster_num_cache_clusters
  automatic_failover_enabled = var.chat_redis_cluster_automatic_failover_enabled
  multi_az_enabled           = var.chat_redis_cluster_multi_az_enabled
  parameter_group_name       = aws_elasticache_parameter_group.chat_redis_cluster.name
  engine_version             = "7.1"
  subnet_group_name          = aws_elasticache_subnet_group.chat_redis_cluster.name
  security_group_ids         = [aws_security_group.chat_redis_cluster.id]
  tags = {
    Name = local.chat_redis_name
  }
}

resource "aws_route53_record" "chat_redis_cluster" {
  zone_id = local.internal_dns_zone_id
  name    = "${local.chat_redis_name}.eks"
  type    = "CNAME"
  ttl     = 300
  records = [aws_elasticache_replication_group.chat_redis_cluster.primary_endpoint_address]
}
